# saltnz

./: .gitignore  README.md  handler.bat  mock.bat  pyproject.toml  simulate_v1.bat
scripts/: dashboard.py  find_nominal.py  plotting.py  simulate.py
src/saltnz/: __init__.py  cli.py  config.py  constants.py  handle_fpga.py  mock_fpga.py
tests/: conftest.py  test_config.py  test_dashboard.py  test_mock_fpga.py
